<resources>
    <string name="app_name">RosesAndThorns</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_my_entries">MyEntriesActivity</string>
    <string name="empty_entry_message">Please write something!</string>
    <string name="title_activity_new_rose">NewRoseActivity</string>
    <string name="me_gmail_com">me@gmail.com</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="password">password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="this_week_s_thorn">This week\'s Thorn:</string>
    <string name="the_bad">The bad.</string>
    <string name="this_week_s_bud">This week\'s Bud:</string>
    <string name="something_to_look_forward_to">Something to look forward to.</string>
    <string name="the_good">The good.</string>
    <string name="this_week_s_rose">This week\'s Rose:</string>
    <string name="me_gmail_com">me@gmail.com</string>
    <string name="feed">Feed</string>
    <string name="my_previous_entries">My Previous Entries</string>
    <string name="add_new_entry">Add New Entry</string>
</resources>
