<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context="hu.ait.android.rosesandthorns.NewEntryActivity">

        <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            card_view:cardCornerRadius="4dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView android:src="@drawable/rose"
                    android:layout_width="wrap_content"
                    android:layout_height="72dp"
                    android:layout_marginBottom="24dp"
                    android:layout_gravity="center_horizontal" />

                <TextView
                    android:id="@+id/tvRoseLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/this_week_s_rose"/>

                <EditText
                    android:id="@+id/etRose"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/the_good"/>
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            card_view:cardCornerRadius="4dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <ImageView android:src="@drawable/thorn"
                    android:layout_width="wrap_content"
                    android:layout_height="72dp"
                    android:layout_marginBottom="24dp"
                    android:layout_gravity="center_horizontal" />

                <TextView
                    android:id="@+id/tvThornLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/this_week_s_thorn"/>

                <EditText
                    android:id="@+id/etThorn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/the_bad"/>
            </LinearLayout>


        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            card_view:cardCornerRadius="4dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView android:src="@drawable/bud"
                    android:layout_width="wrap_content"
                    android:layout_height="72dp"
                    android:layout_marginBottom="24dp"
                    android:layout_gravity="center_horizontal" />

                <TextView
                    android:id="@+id/tvBudLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/this_week_s_bud"/>

                <EditText
                    android:id="@+id/etBud"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/something_to_look_forward_to"/>

            </LinearLayout>


        </android.support.v7.widget.CardView>

        <Button
            android:id="@+id/btnSaveEntry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="save"/>

    </LinearLayout>
</ScrollView>
